--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>주사위 게임</title>
+    <link href="index.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
